ecmascript/parser/tests/test262-error-references/fail/cbc28b1205acaac8.js.stderr
error: Parenthesized expression cannot contain spread operator
 --> $DIR/tests/test262-parser/fail/cbc28b1205acaac8.js:1:8
  |
1 | (b, ...a) + 1
  |        ^

